@@ -1,3 +1,19 @@
+/*
+ * Copyright 2026, Seqera Labs
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 plugins {
     id 'java'
     id 'application'
@@ -14,7 +30,7 @@ java {
 }
 
 dependencies {
-    implementation project(':lib')
+    implementation project(':lib-zvec')
 }
 
 application {
@@ -23,4 +39,5 @@ application {
 
 tasks.named('run') {
     systemProperty 'java.library.path', project.findProperty('nativeLibPath') ?: "${rootProject.projectDir}/native/build"
+    jvmArgs '--enable-native-access=ALL-UNNAMED'
 }
